<resources>
    <string name="app_name">KotlinFirechat</string>

    <!--Image picker Strings-->
    <string name="choose_image_picker_text">Choose Image Source</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="choose_image_picture_text">Choose a Picture</string>


    <!-- Login and Create Account Screen  -->
    <string name="error_invalid_account">There is no user record corresponding to this identifier.</string>
    <string name="error_invalid_password">The password is invalid or the user does not have a password</string>
    <string name="error_weak_password">Use another password, last one was so weak</string>
    <string name="error_picture_null">A problem has occurred, try it again later</string>
    <string name="error_unexpected">Server found an unexpected error, try again later.</string>
    <string name="error_google">Error retrieving data from Google</string>
    <string name="error_no_connection">Looks like you don\'t have internet connection, try again later.</string>
    <string name="error_invalid_certificate">Your connection is not secure, try again later.</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_email_already_exist">An user with this email already exist</string>
    <string name="error_unknown">Unknown error, please, try again</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
</resources>
