<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputUsername"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:background="@android:color/white"
            android:hint="@string/hint_enter_username"
            android:id="@+id/editTextUsername"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:background="@android:color/white"
            android:hint="@string/hint_enter_email"
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:background="@android:color/white"
            android:hint="@string/hint_enter_password"
            android:id="@+id/editTextPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/createAccountButton"
        android:layout_height="@dimen/input_field_height"
        android:layout_width="match_parent"
        android:text="@string/title_activity_create_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_buttons_text_size" />

    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/LoginCreateText"
            android:id="@+id/alreadyHaveAcccountText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_already_have_account" />

        <TextView
            style="@style/LoginCreateTextButton"
            android:id="@+id/signInButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_sign_in" />
    </LinearLayout>
</LinearLayout>