<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/linearLayoutLoginActivity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="0px"
            android:layout_width="0px" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_height="@dimen/logo_image_size"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="@dimen/logo_image_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:background="@android:color/white"
                android:hint="@string/hint_enter_password"
                android:id="@+id/editTextPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:background="@color/colorPrimary"
            android:id="@+id/loginPasswordButton"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:layout_width="match_parent"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGoogleButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <LinearLayout
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/LoginCreateText"
                android:id="@+id/tv_dont_have_account"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_dont_have_account" />

            <TextView
                style="@style/LoginCreateTextButton"
                android:id="@+id/createAccountText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_create_account" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>